fix: abnormal page width on mobile - attempt 5

--- a/themes/2025/assets/css/main.css
+++ b/themes/2025/assets/css/main.css
@@ -68,6 +68,8 @@ main {
 
 header {
   max-width: 100%;
+  position: sticky;
+  top: 0px;
 }
 
 @media screen and (max-width: 768px) {
