--- a/themes/2025/assets/css/nav.css
+++ b/themes/2025/assets/css/nav.css
@@ -1,9 +1,9 @@
 .main-nav {
-  position: sticky;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 50px;
+  max-width: 100%;
   padding: 2px 30px;
   color: var(--o-blue);
 }
@@ -72,10 +72,27 @@
   background-color: transparent;
   min-width: 50px;
   height: 50px;
+  color: black;
 }
 
 #menu-button i {
   font-size: 1.5rem;
+}
+
+.main-nav:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: -50px;
+  z-index: -1;
+  pointer-events: none;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.9) 40%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 @media screen and (max-width: 1024px) {
@@ -93,8 +110,10 @@
   }
 
   .nav-list {
+    display: flex;
     visibility: hidden;
     opacity: 0;
+    z-index: 99;
     position: absolute;
     width: 100%;
     transition: 0.5s ease;
@@ -103,9 +122,23 @@
 
   .active-menu {
     visibility: visible;
-    display: flex;
     padding-top: 50px;
     opacity: 1;
-    backdrop-filter: blur(10px);
+  }
+
+  .nav-list::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: -300px;
+    z-index: -1;
+    pointer-events: none;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.9) 70%,
+      rgba(255, 255, 255, 0) 100%
+    );
   }
 }
